ft : did responsiveness on nav-bar , still needs fixing on spacing

--- a/src/output.css
+++ b/src/output.css
@@ -8,16 +8,15 @@ html {
 .container {
   max-width: 98rem;
   margin: 0 auto;
-  padding: 0 2.2rem;
 }
 
-/* HEADER SECTION CSS  */
+/* HEADER SECTION  */
 
 header {
   font-weight: 200;
   position: fixed;
   top: 0;
-  z-index: 1400;
+  z-index: 40;
   width: 100%;
   height: 4.4rem;
   background-color: rgba(255, 255, 255, 0.7);
@@ -25,19 +24,18 @@ header {
           backdrop-filter: blur(1rem);
 }
 
-.navigation {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
+#nav-tv {
+  text-wrap: nowrap;
 }
 
 .nav-list {
   list-style-type: none;
   display: flex;
   align-items: center;
-  justify-content: center;
-  margin: 0 -1rem;
   position: absolute;
+  padding-left: 22px;
+  padding-right: 22px;
+  justify-content: center;
 }
 
 .nav-list-smaller {
@@ -47,162 +45,147 @@ header {
 .nav-item {
   font-size: 1.2rem;
   color: black;
-  padding: 0 0.8rem;
-  margin: 0 0.8rem;
+  padding: 0 .8rem;
+  margin: 0 .8rem;
   text-decoration: none;
+  display: flex;
+}
+
+.nav-item-apple-icon {
+  height: 44px;
+  width: 30px
+}
+
+.nav-item-bag-icon, 
+.nav-item-search-icon {
+  height: 44px;
+  width: 31px
 }
 
 /* HEADER SECTION MOBILE AND RESPONSIVE */
 
-@media screen and (max-width: 833px)  {
+@media screen and (max-width: 844px)  {
   header {
+    height: 4.8rem;
     transition: background .36s cubic-bezier(0.32, 0.08 , 0.24 , 1),
                     height .56s cubic-bezier(0.32, 0.08 , 0.24 , 1) ;
-    height: 4.8rem;
-  }
-
-  header .container {
-    padding: 0;
   }
 
   .nav-list {
-    margin-top: 0;
+    padding: 0px;
+    margin-top: 0px
   }
 
   .nav-list-smaller {
-    display: flex;
+    display: flex
   }
 
-  .nav-content {
-    width: 4.8rem;
-    height: auto;
+  .nav-item {
     display: flex;
-    justify-content: center;
+    height: 48px;
+    width: 48px
+  }
+
+  .nav-content-hidden {
+    display: none;
   }
 
   .hamburger {
     position: relative;
     z-index: 50;
-    width: 100%;
-    height: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    height: 100%;
+    width: 100%;
     cursor: pointer;
-  }
-
-  .nav-item-apple-icon {
-    flex-grow: 1;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center
   }
 
   .line {
+    transition: margin-top .3192s cubic-bezier(.04, .04, .12, .96);
     position: absolute;
-    width: 1.8rem;
     height: 2px;
-    background-color: black;
-    transition: margin-top .3192s cubic-bezier(0.04, 0.04, 0.12, 0.96) ;
-    opacity: .8s;
-    border-radius: 2px;
+    width: 1.5rem;
+    --tw-bg-opacity: 1;
+    background-color: rgb(110 110 115 / var(--tw-bg-opacity))
   }
 
   .line-top {
-    margin-top: 10px;
+    margin-top: 0.75rem
   }
 
   .line-bottom {
-    margin-top: -10px;
+    margin-top: -9px
   }
 
   .active .line-top {
-    margin-top: 0;
     transform: rotate(45deg);
-    transition: transform .3192s .1s cubic-bezier(0.04, 0.04, 0.12, 0.96);
+    transition: transform .3192s .1s cubic-bezier(.04, .04, .12, .96);
+    margin-top: 0px
   }
 
   .active .line-bottom {
-    margin-top: 0;
     transform: rotate(-45deg);
-    transition: transform .3192s .1s cubic-bezier(0.04, 0.04, 0.12, 0.96);
+    transition: transform .3192s .1s cubic-bezier(.04, .04, .12, .96);
+    margin-top: 0px
   }
 
-  header .active {
-    background-color: white;
-    height: 100%;
+  header.active {
+    background-color: #fafafc;
+    height: 100%
   }
 
-  .nav-item-apple-icon {
-    width: 4.8rem;
-    height: 4.8rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 50;
-  }
-
-  .nav-item > .nav-item-apple-icon {
-    flex-grow: 1;
-  }
-
-  .nav-item-bag-icon {
-    width: 4.8rem;
-    height: 4.8rem;
-  }
-
-  .nav-item-search-icon {
-    width: 4.8rem;
-    height: 4.8rem;
+  .nav-smaller-hidden {
+    transition: opacity 3s;
   }
 
   .navigation {
     position: relative;
   }
 
-  .nav-content-left {
-    margin-right: 25rem;
-  }
-
-  .nav-content-right {
-    display: flex;
-  }
-
   .nav-item {
-    font: 10rem;
-    padding: 0;
-    margin: auto 0;
+    font-weight: 600;
+    letter-spacing: .7px;
+    color: #1d1d1f;
+    padding: 0px;
+    font-size: 2.8rem
   }
 
   .nav-list-larger {
     position: fixed;
+    top: 0;
+    letter-spacing: 0;
+    width: 0;
+    height: 0;
     display: block;
     padding: 10.5rem 5rem;
+    z-index: 20;
+    box-sizing: border-box;
+    transition: opacity 3.3s;
+    opacity: 0;
     visibility: hidden;
   }
 
   .active .nav-list-larger {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     opacity: 1;
     visibility: visible;
   }
 
-  /* .nav-link-bag { 
-        opacity: 0;
-        transition: opacity 3.3;
-    } */
-
-  .nav-list-larger .nav-item {
-    width: 100%;
-    justify-content: flex-start;
+  .active .nav-smnaller-hidden {
+    opacity: 0;
+    transition: opacity .3s;
   }
 
-  .active .nav-list-larger .nav-item {
+  .active .nav-list-larger .nav-content {
     animation: fadeIn 1s ease-in;
   }
 
   @keyframes fadeIn {
     from {
-      opacity: 0
+      opacity: 0;
     }
 
     to {
@@ -393,7 +376,7 @@ header {
   display: grid;
   grid-template-columns: repeat(1, minmax(0, 1fr));
   grid-template-rows: repeat(6,500px);
-  gap: 0.5rem
+  gap: 1rem
 }
 
 @media (min-width: 768px) {
@@ -450,7 +433,7 @@ header {
 
 @media (min-width: 1280px) {
   .sub-heading-grid {
-    font-size: 3.2rem
+    font-size: 2.8rem
   }
 }
 
@@ -466,24 +449,31 @@ header {
 }
 
 .button-container-grid {
-  margin-top: 17px
+  margin-top: 8px;
+}
+
+.learn-more-grid {
+  padding: .8rem 2rem;
+  font-size: 14px;
+  background-color: #0071e3;
+  transition: background-color 0.2s ease-in-out;
+  border-radius: 9999px;
+  font-weight: 300;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity))
+}
+
+.learn-more-grid:hover {
+  background-color: #2b86e2;
 }
 
 .buy-grid {
-  font-weight: 300;
-  margin-top: 19px;
-  padding: 1rem 2.5rem;
+  font-size: 14px;
   color: #0071e3;
-  border: 1px solid #0071e3;
+  padding: 1rem 2rem;
   transition: background-color 0.2s ease-in-out;
-  border-radius: 9999px;
-  font-size: 1.4rem
-}
-
-@media (min-width: 768px) {
-  .buy-grid {
-    font-size: 1.7rem
-  }
+  border: 1px solid #0071e3;
+  border-radius: 9999px
 }
 
 .buy-grid:hover {
@@ -491,31 +481,20 @@ header {
   color: white;
 }
 
-.learn-more-grid {
-  margin: 13px;
-  padding: .5rem 2rem;
-  font-weight: 300;
-  background-color: #0071e3;
-  color: white;
-  border: none;
-  transition: background-color 0.2s ease-in-out;
-  border-radius: 9999px;
-  font-size: 1.4rem
-}
-
-.learn-more-grid:hover {
-  background-color: #2b86e2;
-}
-
-.buy
-
 /* VISION PRO */
-#heading-vision > img {
-  height: 32px;
+
+.heading-img > img {
   width: auto;
+  height: 27px
 }
 
-#heading-vision {
+@media (min-width: 1024px) {
+  .heading-img > img {
+    height: 34px
+  }
+}
+
+.heading-img {
   display: flex;
   justify-content: center;
 }
@@ -529,6 +508,24 @@ header {
 @media (min-width: 1024px) {
   .detail-container-vision {
     padding-top: 35rem
+  }
+}
+
+/* WATCH SECTION */
+
+.sub-heading-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity))
+}
+
+#heading-watch > img {
+  width: auto;
+  height: 42px
+}
+
+@media (min-width: 1024px) {
+  #heading-watch > img {
+    height: 54px
   }
 }
 
